# buildie

./: .env  .gitignore  Makefile  README.md  build_in_public_autopilot_milestones.mdc  demo_generation.txt  env.example.txt  post_generation.txt  searching_over_buildie_codebase.txt  test_twitter_auth.py
.cursor/rules/: build_in_public_autopilot_milestones.mdc
api/: Dockerfile  README.md  pyproject.toml  requirements.txt
api/app/: main.py
api/app/agents/: __init__.py  autopilot_agent.py  build_graph.py  graph_runner.py  prompts.py  tools.py
api/app/agents/testing/: test_demo_generation.py  test_search_case.py  test_x_post_tool.py
api/app/core/: email_utils.py  supabase_client.py
api/app/dependencies/: __init__.py  auth.py
api/app/ingest/: __init__.py  commit_historian.py  diff_processor.py  diff_splitter.py  embeddings.py  indexer.py  manual_ingest_tool.py  test_indexer.py  test_ingest.py  test_search.py
api/app/publish/: __init__.py  arize_logger.py  social_mocks.py
api/app/routes/: __init__.py  auth.py  events.py  generate.py  projects.py  twitter_routes.py  webhook.py
api/app/schemas/: auth.py  project.py
api/app/services/: supabase_service.py
api/app/video/: __init__.py  recorder.py
supabase/: .gitignore
supabase/migrations/: 20250518003651_create_code_embeddings_table.sql  20250518014752_create_core_tables.sql  20250518022331_add_project_id_to_code_embeddings.sql
web/: README.md  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/commit-spark-demo/: page.tsx
web/src/components/: theme-provider.tsx
web/src/contexts/: AuthContext.tsx
(+18 files in other folders)
